--- a/ESBootstrap/ESBootstrap.csproj
+++ b/ESBootstrap/ESBootstrap.csproj
@@ -118,6 +118,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bridge\output\bootstrap.min.css" />
+    <Content Include="Bridge\output\bootstrap.min.js" />
+    <Content Include="Bridge\output\bridge.js" />
+    <Content Include="Bridge\output\bridge.min.js" />
+    <Content Include="Bridge\output\eSBootstrap.bootstrap.js" />
+    <Content Include="Bridge\output\eSBootstrap.bootstrap.min.js" />
+    <Content Include="Bridge\output\eSBootstrap.js" />
+    <Content Include="Bridge\output\eSBootstrap.min.js" />
+    <Content Include="Bridge\output\jquery-1.12.0.min.js" />
     <Content Include="Bridge\output\readme.txt" />
     <Content Include="Bridge\www\demo.html" />
   </ItemGroup>
