--- a/ESBootstrap/ESBootstrap.csproj
+++ b/ESBootstrap/ESBootstrap.csproj
@@ -35,14 +35,14 @@
     <NoStdLib>true</NoStdLib>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bridge, Version=15.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.Core.15.7.0\lib\net40\Bridge.dll</HintPath>
+    <Reference Include="Bridge, Version=16.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bridge.Core.16.4.0\lib\net40\Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="Bridge.Html5, Version=15.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.Html5.15.7.0\lib\net40\Bridge.Html5.dll</HintPath>
+    <Reference Include="Bridge.Html5, Version=16.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bridge.Html5.16.4.0\lib\net40\Bridge.Html5.dll</HintPath>
     </Reference>
     <Reference Include="Bridge.jQuery2, Version=2.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.jQuery.2.9.3\lib\net40\Bridge.jQuery2.dll</HintPath>
+      <HintPath>..\packages\Bridge.jQuery.2.9.4\lib\net40\Bridge.jQuery2.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -134,29 +134,19 @@
     <Compile Include="Vector4.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Bridge\bridge.json" />
+    <None Include="bridge.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Bridge\output\bootstrap.min.css" />
-    <Content Include="Bridge\output\bootstrap.min.js" />
-    <Content Include="Bridge\output\bridge.js" />
-    <Content Include="Bridge\output\bridge.min.js" />
-    <Content Include="Bridge\output\eSBootstrap.bootstrap.js" />
-    <Content Include="Bridge\output\eSBootstrap.bootstrap.min.js" />
-    <Content Include="Bridge\output\eSBootstrap.js" />
-    <Content Include="Bridge\output\eSBootstrap.min.js" />
-    <Content Include="Bridge\output\jquery-1.12.0.min.js" />
-    <Content Include="Bridge\output\readme.txt" />
-    <Content Include="Bridge\output\todc-bootstrap.min.css" />
-    <Content Include="Bridge\www\demo.html" />
+    <Content Include="bin\Release\bridge\index.html" />
+    <Content Include="bin\Release\bridge\bootstrap.min.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Bridge.Min.15.7.0\build\Bridge.Min.targets" Condition="Exists('..\packages\Bridge.Min.15.7.0\build\Bridge.Min.targets')" />
+  <Import Project="..\packages\Bridge.Min.16.4.0\build\Bridge.Min.targets" Condition="Exists('..\packages\Bridge.Min.16.4.0\build\Bridge.Min.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Bridge.Min.15.7.0\build\Bridge.Min.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Bridge.Min.15.7.0\build\Bridge.Min.targets'))" />
+    <Error Condition="!Exists('..\packages\Bridge.Min.16.4.0\build\Bridge.Min.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Bridge.Min.16.4.0\build\Bridge.Min.targets'))" />
   </Target>
 </Project>
